--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -13,7 +13,7 @@ body{
     position: relative;
     min-height: 100vh;
     width: 100%;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
 header{
@@ -240,4 +240,262 @@ button:hover{
 .home_section.active{
     transition: 0.5s ease;
     margin-left: 250px;
+}
+
+.agenda{
+    margin-left: 100px;
+    transition: 0.5s ease;
+}
+
+.agenda.active{
+    margin-top: 70px;
+    margin-left: 300px;
+    transition: 0.5s ease;
+}
+
+.recommend{
+    margin-left: 636px;
+    transition: 0.5s ease;
+    position: relative;
+    margin-top: 20px;
+}
+
+.recommend.active{
+    margin-left: 800px;
+    transition: 0.5s ease;
+}
+
+.recommend.active .caption{
+    transition: 0.5s ease;
+    padding: 5px 9px;
+}
+
+.recommend.active img{
+    height: 300px;
+    transition: 0.5s ease;
+}
+
+.recommend img{
+    width: 96%;
+    height: 375px;
+    transition: 0.5s ease;
+}
+
+.trans{
+    display: none;
+}
+
+.previous, .next{
+    cursor: pointer;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    margin-top: -22px;
+    position: absolute;
+}
+
+.next{
+    right: 30px;
+    border-radius: 3px 0 0 3px;
+}
+
+.previous:hover, .next:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.caption{
+    color: white;
+    font-size: 15px;
+    padding: 5px 12px;
+    position: absolute;
+    bottom: 30px;
+    width: 92.7%;
+    text-align: center;
+    background-color: black;
+    transition: 0.5s ease;
+}
+
+.dot{
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.5s ease;
+    margin: 0 2px;
+}
+
+.dotActive, .dot:hover{
+    background-color: #717171;
+}
+
+.fade{
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade{
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@keyframes fade{
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+form{
+    display: flex;
+    min-height: 15vh;
+    justify-content: left;
+    align-items: center;
+    transform: translateY(-450%);
+}
+
+form input, form button{
+    padding: 0.4 rem;
+    border-radius: 10px;
+    font-size: 1.6 rem;
+    background: white;
+}
+
+form button{
+    color: grey;
+    background: aqua;
+    cursor: pointer;
+    transition: all 0.3 ease;
+    padding: 5px 10px;
+    font-size: 12px;
+    margin-left: 5px;
+}
+
+form button:hover{
+    background-color: lightblue;
+    color: black;
+}
+
+select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: none;
+}
+
+.select{
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+}
+
+select{
+    color: #c065c0;
+    width: 8rem;
+    cursor: pointer;
+    padding: 0.7rem;
+}
+
+.select::after{
+    content: "\25bc";
+    position: absolute;
+    color: #c065c0;
+    top: 7px;
+    right: 6px;
+    pointer-events: none;
+}
+
+.select:hover::after{
+   color: #583429;
+}
+
+.todo_container{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-top: -460px;
+}
+
+.todo_list{
+    min-width: 40%;
+    list-style: none;
+}
+
+.todo_input{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.todo{
+    margin: 5px auto;
+    background: rgb(46, 44, 44);
+    color: #000000;
+    display: flex;
+    font-size: 1.2rem;
+    padding: 0.3rem;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
+    border-radius: 10px;
+}
+
+.todo li {
+    flex: 1;
+    white-space: nowrap;
+}
+
+.complete_btn, .delete_btn{
+    padding: 0.5rem;
+    background: #ff3700;
+    color: white;
+    border: none;
+    margin-left: 0.2rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.complete_btn{
+    background: rgb(67, 179, 67);
+}
+.complete_btn:active{
+    background: green;
+}
+
+.delete_btn:active{
+    background: #b65337;
+}
+
+.fa-trash, .fa-check{
+    pointer-events: none;
+}
+
+.completedItem{
+    text-decoration: line-through;
+    opacity: 0.5;
+    transform: scale(0.96);
+}
+
+.fall{
+    transform: 0.3 ease;
+    opacity: 0;
+}
+
+.note_rec{
+    margin-left: 7%;
+    margin-top: -2%;
+    margin-bottom: 3%;
+    transition: 0.5s ease;
+}
+
+.note_rec.active{
+    margin-left: 22%;
+    transition: 0.5s ease;
 }
