--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -35,7 +35,7 @@ footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 0.5%;
     width: 100%;
     left: 0;
     bottom: 0;
