--- a/pages/relax/relax.css
+++ b/pages/relax/relax.css
@@ -7,6 +7,10 @@
 }
 
 body{
+    background-image: url("../../src/default_relax_bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     box-sizing: border-box;
     background-color: white;
     color: black;
@@ -14,6 +18,7 @@ body{
     min-height: 100vh;
     width: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 header{
@@ -232,9 +237,24 @@ button:hover{
     opacity: 1;
 }
 
+.sidebar.collapse{
+    margin-left: -10%;
+    transition: 0.5s ease;
+    opacity: 0;
+}
+
+.home_section.collapse{
+    opacity: 0;
+    margin-left: 250px;
+    transition: 0.5s ease;
+    margin-top: -10%;
+    margin-bottom: 3%;
+}
+
 .home_section{
     transition: 0.5s ease;
     margin-left: 75px;
+    margin-bottom: 1%;
 }
 
 .home_section.active{
@@ -248,109 +268,8 @@ button:hover{
 }
 
 .agenda.active{
-    margin-top: 70px;
     margin-left: 300px;
     transition: 0.5s ease;
-}
-
-.recommend{
-    margin-left: 636px;
-    transition: 0.5s ease;
-    position: relative;
-    margin-top: 20px;
-}
-
-.recommend.active{
-    margin-left: 800px;
-    transition: 0.5s ease;
-}
-
-.recommend.active .caption{
-    transition: 0.5s ease;
-    padding: 5px 9px;
-}
-
-.recommend.active img{
-    height: 300px;
-    transition: 0.5s ease;
-}
-
-.recommend img{
-    width: 96%;
-    height: 375px;
-    transition: 0.5s ease;
-}
-
-.trans{
-    display: none;
-}
-
-.previous, .next{
-    cursor: pointer;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    margin-top: -22px;
-    position: absolute;
-}
-
-.next{
-    right: 30px;
-    border-radius: 3px 0 0 3px;
-}
-
-.previous:hover, .next:hover{
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.caption{
-    color: white;
-    font-size: 15px;
-    padding: 5px 12px;
-    position: absolute;
-    bottom: 30px;
-    width: 92.7%;
-    text-align: center;
-    background-color: black;
-    transition: 0.5s ease;
-}
-
-.dot{
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.5s ease;
-    margin: 0 2px;
-}
-
-.dotActive, .dot:hover{
-    background-color: #717171;
-}
-
-.fade{
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade{
-    from {opacity: .4}
-    to {opacity: 1}
-}
-
-@keyframes fade{
-    from {opacity: .4}
-    to {opacity: 1}
 }
 
 form{
@@ -358,7 +277,6 @@ form{
     min-height: 15vh;
     justify-content: left;
     align-items: center;
-    transform: translateY(-450%);
 }
 
 form input, form button{
@@ -421,7 +339,6 @@ select{
     display: flex;
     justify-content: left;
     align-items: center;
-    margin-top: -460px;
 }
 
 .todo_list{
@@ -488,66 +405,32 @@ select{
     opacity: 0;
 }
 
-.note_rec{
-    margin-left: 7%;
-    margin-top: -2%;
-    margin-bottom: 3%;
-    transition: 0.5s ease;
+.collapse{
+    display:flexbox;
+    margin-left: 90%;
+    background-color: black;
 }
 
-.note_rec.active{
-    margin-left: 22%;
-    transition: 0.5s ease;
+.collapse:hover{
+    color: cyan;
+    background-color: black;
 }
 
-.notes{
-    margin-left: 5%;
-    margin-top: 3%;
-    display: inline-block;
-}
-
-.notes img{
-    margin-left: 10px;
-    max-width: 150px;
-    max-height: 300px;
-}
-
-.notes h4{
+.text{
+    color: white;
+    font-size: xx-large;
     text-align: center;
+    margin-top: 7%;
+    transition: 0.5s ease;
+    margin-left: 1%;
 }
 
-.rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
+.text.position{
+    margin-top: 11%;
+    transition: 0.5s ease;
 }
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-}
-.rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
-}
-.rate:not(:checked) > label:before {
-    content: '★ ';
-}
-.rate > input:checked ~ label {
-    color: #ffc700;    
-}
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #deb217;  
-}
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
+
+.audio{
+    margin-top: 2%;
+    text-align: center;
 }
