--- a/pages/agenda/agenda.css
+++ b/pages/agenda/agenda.css
@@ -267,18 +267,18 @@ form input, form button{
 }
 
 form button{
-    color: grey;
-    background: aqua;
+    color: white;
+    background: rgb(127, 80, 201);
     cursor: pointer;
     transition: all 0.3 ease;
-    padding: 5px 10px;
-    font-size: 12px;
-    margin-left: 5px;
+    padding: 8px 13px;
+    font-size: 14px;
+    margin-left: 1%;
 }
 
 form button:hover{
-    background-color: lightblue;
-    color: black;
+    background-color: rgb(87, 42, 158);
+    color: white;
 }
 
 select{
@@ -316,7 +316,8 @@ select{
 }
 
 .todo_container{
-    display: flex;
+    float: left;
+    width: 40%;
     justify-content: left;
     align-items: center;
 }
@@ -327,8 +328,9 @@ select{
 }
 
 .todo_input{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 5px 10px;
+    width: 30%;
+    margin-left: 10%;
 }
 
 .todo{
@@ -342,6 +344,7 @@ select{
     align-items: center;
     transition: all 0.5s ease;
     border-radius: 10px;
+    margin-right: -10%;
 }
 
 .todo li {
@@ -399,4 +402,59 @@ h2.active{
 .date{
     margin-left: 1%;
     padding-left: 8px;
+    padding: 5px 10px;
+}
+
+.todo_item{
+    padding-left: 2%;
+}
+
+.vl{
+    border-left: 2px solid black;
+    height: 100%;
+    margin-top: 19%;
+    position: absolute;
+    left: 50%;
+    margin-left: -3px;
+    top: 0;
+    transition: 0.5s ease;
+}
+
+.vl.active{
+    transition: 0.5s ease;
+    margin-left: 120px;
+}
+
+.todo_not_today_container{
+    align-items: center;
+    margin-left: 48%;
+    margin-right: 2%;
+}
+
+.todo_not_today_list{
+    min-width: 40%;
+    list-style: none;
+}
+
+.todo_not_today{
+    margin: 5px auto;
+    background: rgb(46, 44, 44);
+    color: #000000;
+    display: flex;
+    font-size: 1.2rem;
+    padding: 0.3rem;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
+    border-radius: 10px;
+}
+
+.todo_not_today li {
+    flex: 1;
+    white-space: nowrap;
+}
+
+h3{
+    margin-bottom: 10px;
+    margin-left: 40%;
 }
