--- a/pages/contacts/contacts.css
+++ b/pages/contacts/contacts.css
@@ -86,42 +86,42 @@ button:hover{
     background-color: rgba(0,136,169,0.8);
 }
 
-.alfons{
-    float: left;
-    margin-top: 2%;
-    text-align: center;
-    margin-left: 30%;
-}
-
-.alfons img{
-    width: 200px;
-}
-
-.nic{
-    margin-left: 55%;
-    margin-top: 2%;
-}
-
-.nic img{
-    width: 200px;
-}
-
-.nic h4{
-    margin-left: 4.5%;
-}
-
 h2{
+    color: white;
+    padding: 15px;
+}
+
+.inputs{
     text-align: center;
+    background-color: #32393E;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 2%;
+    border-radius: 15px;
+}
+
+.emailbox{
+    padding: 5px 10px;
+    border-radius: 10px;
+    width: 20%;
+}
+
+.name{
+    padding: 5px 10px;
+    border-radius: 10px;
+    width: 20%;
     margin-top: 2%;
 }
 
-.description{
-    margin-top: 5%;
-    text-align: center;
+.message{
+    margin-top: 2%;
+    border-radius: 10px;
+    padding: 5px 10px;
+    width: 50%;
+    height: 250px;
 }
 
-.description h4{
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-top: 1%;
+.send{
+    margin-top: 2%;
+    margin-bottom: 5%;
 }
