--- a/pages/profile/profile.css
+++ b/pages/profile/profile.css
@@ -173,12 +173,13 @@ button:hover{
     transition: all 0.4s ease;
     border-radius: 12px;
     white-space: nowrap;
+    padding-left: 3px;
 }
 
 .sidebar ul li a:hover{
     background: white;
-    color: darkblue;
-    padding-left: 5px;
+    color: black;
+    padding-left: 8px;
 }
 
 .sidebar ul li a img{
@@ -418,4 +419,56 @@ select{
 .recentnotes.active{
     margin-left: 50%;
     transition: 0.5s ease;
+}
+
+.notes{
+    margin-left: 5%;
+    margin-top: 3%;
+    display: inline-block;
+}
+
+.notes img{
+    margin-left: 10px;
+    max-width: 150px;
+    max-height: 300px;
+}
+
+.notes h4{
+    text-align: center;
+}
+
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
+}
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
 }
