--- a/pages/help/help.css
+++ b/pages/help/help.css
@@ -86,30 +86,30 @@ button:hover{
     background-color: rgba(0,136,169,0.8);
 }
 
-.alfons{
-    margin-top: 2%;
-    text-align: center;
-    margin-left: -30%;
-}
-
-.nic{
-    margin-top: -14.9%;
-    text-align: center;
-    margin-left: 30%;
-}
-
 h2{
     text-align: center;
     margin-top: 2%;
 }
 
-.description{
-    margin-top: 5%;
-    text-align: center;
+.dropdown{
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-.description h4{
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-top: 1%;
+p{
+    margin-left: 5%;
+    margin-top: -2%;
+    background-color: lavender;
+    padding-top: 5%;
+    
+}
+
+h3{
+    display: block;
+    background-color: #32393E;
+    margin-top: 2%;
+    padding: 1% 3%;
+    border-radius: 15px;
+    color: white;
+    cursor: pointer;
 }
