--- a/pages/register/register.css
+++ b/pages/register/register.css
@@ -151,3 +151,11 @@ h5 a:hover{
     transition: 0.5s ease;
     text-decoration: underline;
 }
+
+#mail{
+    margin-top: 2%;
+}
+
+.email{
+    margin-top: 2%;
+}
