--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,4 +1,4 @@
-{% extends 'account/main.html' %}
+{% extends 'main/main.html' %}
 
 {% block title %} 
 Register
@@ -8,6 +8,7 @@ Register
 {% load static %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{% static 'account/css/register.css' %}">
+<script src="{% static 'account/js/register.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 
