--- a/dashboard/templates/dashboard/help.html
+++ b/dashboard/templates/dashboard/help.html
@@ -1,29 +1,15 @@
-<!DOCTYPE html>
+{% extends "main/main.html" %}
 
-<html lang="eng">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Studymate || Help</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="help.css">
-    </head>
-    <body>
-        <section class="home_section">
-            <header>
-                <img class="logo" src="../../src/logo.jpg" alt="logo">
-                <nav>
-                    <ul class="nav__links">
-                        <li><a href="../about/about.html">About</a></li>
-                        <li><a href="../help/help.html">Help</a></li>
-                        <li><a href="../contacts/contacts.html">Contacts</a></li>
-                        <li><a href="../login/login.html">Login</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </section>
+{% block title %}Help{% endblock %}
+{% block head %} 
+{% load static %}
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'dashboard/css/help.css' %}">
+{% endblock %}
+
+
+{% block content %}
         <h2>Help</h2>
         <div class="dropdown">
             <h3 class="headerdashboard">Dashboard</h3>
@@ -43,12 +29,5 @@
             <h3 class="headerQuestions">Questions?</h3>
             <p class="Questions">If you have any more questions, feel free to contact us from our contact page.</p>
         </div>
-        <script type="module" src="help.js"></script>
-    </body>
-    <br>
-    <br>
-    <br>
-    <footer>
-        Copyright&copy;Studymate - CS50x Final Project
-    </footer>
-</html>
+        <script type="module" src="{% static 'dashboard/js/help.js' %}"></script>
+{% endblock %}
