--- a/dashboard/templates/dashboard/relax.html
+++ b/dashboard/templates/dashboard/relax.html
@@ -1,47 +1,15 @@
-<!DOCTYPE HTML>
-<html lang="eng">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Studymate || Your Notes</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="upload.css">
-    </head>
-    <body>
-        <section class="home_section">
-            <header>
-                <img class="logo" src="../../src/logo.jpg" alt="logo">
-                <nav>
-                    <ul class="nav__links">
-                        <li><a href="../about/about.html">About</a></li>
-                        <li><a href="../help/help.html">Help</a></li>
-                        <li><a href="../contacts/contacts.html">Contacts</a></li>
-                        
-                    </ul>
-                </nav>
-                <a class="cta" href="../profile/profile.html"><button>Your Profile</button></a>
-            </header>
-        </section>
-        <h2>Upload Your Notes</h2>
-        <div class="data">
-            <h3>Enter Title</h3>
-            <input class="name" placeholder="Enter Your Note Title">
-            <div class="links">
-                <h3>Enter Note Link</h3>
-                <input class="link" placeholder="Enter Your Note Link">
-            </div>
-            <div class="desc">
-                <h3>Description</h3>
-                <input class="description" placeholder="Enter a Description">
-            </div>
-            <div class="buttons">
-                <button class="public">Set to Public</button>
-                <button class="private">Set to Private</button>
-            </div>
-            <button class="submit">Upload</button>
-        </div>
+{% extends "main/main.html" %}
+
+{% block title %}Relax Room{% endblock %}
+{% block head %} 
+{% load static %}
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'dashboard/css/relax.css' %}">
+{% endblock %}
+
+
+{% block content %}
         <div class="sidebar">
             <div class="logo_content">
                 <div class="logo">
@@ -109,11 +77,16 @@
                 </li>
             </ul>
         </div>
-        <script type="module" src="upload.js"></script>
-    </body>
-    <br>
-    <br>
-    <footer>
-        Copyright&copy;Studymate - CS50x Final Project
-    </footer>
-</html>
+        <button class="collapse">Collapse</button>
+        <section class="text">
+            <h2>Good Evening User</h2>
+            <h1></h1>
+        </section>
+        <section class="audio">
+            <iframe width="360" height="200" src="https://www.youtube.com/embed/5qap5aO4i9A?mute=1&autoplay=1" allow="autoplay"></iframe>
+        </section>
+        <br>
+        <br>
+        <br>
+        <script type="module" src="{% static 'dashboard/js/relax.js' %}"></script>
+{% endblock %}
