--- a/notes/templates/upload.html
+++ b/notes/templates/upload.html
@@ -1,55 +1,33 @@
-<!DOCTYPE HTML>
-<html lang="eng">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Studymate || Agenda</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="agenda.css">
-    </head>
-    <body>
-        <section class="home_section">
-            <header>
-                <img class="logo" src="../../src/logo.jpg" alt="logo">
-                <nav>
-                    <ul class="nav__links">
-                        <li><a href="../about/about.html">About</a></li>
-                        <li><a href="../help/help.html">Help</a></li>
-                        <li><a href="../contacts/contacts.html">Contacts</a></li>
-                        
-                    </ul>
-                </nav>
-                <a class="cta" href="../profile/profile.html"><button>Your Profile</button></a>
-            </header>
-        </section>
-        <h2>Agenda</h2>
-        <section class="agenda">
-            <form>
-                <input type="text" placeholder="Enter New Event" class="todo_input" />
-                <input type="date" class="date">
-                <button class="todo_button" type="submit">Add Event
-                    <i class="fa fa-plus-square"></i>
-                </button>
-                <div class="select">
-                    <select name="todos" class="filter_todo">
-                        <option value="all">All</option>
-                        <option value="completed">Completed</option>
-                        <option value="uncompleted">Uncompleted</option>
-                    </select>
-                </div>
-            </form>
-            <div class="todo_container">
-                <h3>Due Today</h3>
-                <ul class="todo_list"></ul>
+{% extends "main/main.html" %}
+
+{% block title %}Upload Note{% endblock %}
+{% block head %} 
+{% load static %}
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'notes/css/upload.css' %}">
+{% endblock %}
+
+
+{% block content %}
+        <h2>Upload Your Notes</h2>
+        <div class="data">
+            <h3>Enter Title</h3>
+            <input class="name" placeholder="Enter Your Note Title">
+            <div class="links">
+                <h3>Enter Note Link</h3>
+                <input class="link" placeholder="Enter Your Note Link">
             </div>
-            <div class="vl"></div>
-            <div class="todo_not_today_container">
-                <h3>Upcoming</h3>
-                <ul class="todo_not_today_list"></ul>
+            <div class="desc">
+                <h3>Description</h3>
+                <input class="description" placeholder="Enter a Description">
             </div>
-        </section>
+            <div class="buttons">
+                <button class="public">Set to Public</button>
+                <button class="private">Set to Private</button>
+            </div>
+            <button class="submit">Upload</button>
+        </div>
         <div class="sidebar">
             <div class="logo_content">
                 <div class="logo">
@@ -117,11 +95,7 @@
                 </li>
             </ul>
         </div>
-        <script type="module" src="agenda.js"></script>
-    </body>
-    <br>
-    <br>
-    <footer>
-        Copyright&copy;Studymate - CS50x Final Project
-    </footer>
-</html>
+        <br>
+        <br>
+        <script type="module" src="{% static 'notes/js/upload.js' %}"></script>
+{% endblock %}
