--- a/dashboard/templates/dashboard/relax.html
+++ b/dashboard/templates/dashboard/relax.html
@@ -19,7 +19,9 @@
     <div id="player"></div>
 </section>
 <section class="toogle-player">
-    <div class="status">Playing ... </div>
+    <button class="playButton"><i class="fa fa-play fa-2x" aria-hidden="true"></i></button>
+    <button class="pauseButton"><i class="fa fa-pause fa-2x" aria-hidden="true"></i></button>
+    <div class="status">Now playing ...</div>
 </scetion>
 {% endblock %} 
 {% block ending %}
