--- a/static/account/css/settings.css
+++ b/static/account/css/settings.css
@@ -73,7 +73,7 @@ button{
     padding: 9px 25px;
     background-color: rgba(0,136,169,1);
     border: none;
-    border-radius: 50px;
+    border-radius: 30px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
     margin-right: 15px;
@@ -304,10 +304,9 @@ select {
     margin-top: 2%;
 }
 
-.contacts button, .default-button button{
+.contacts button, .default-button{
     margin-top: 5px;
     border-radius: 8px;
-    padding: 5px;
     padding-left: 10px;
     padding-right: 10px;
     background-color: black;
@@ -327,10 +326,6 @@ select {
 .contact.on:hover, .default-button.on:hover{
     opacity: 0.75;
     background-color: black;
-}
-
-.default-button button {
-    margin-right: 20px;
 }
 
 .save{
@@ -367,8 +362,12 @@ select {
     margin-bottom: 5%;
 }
 
-#default-text {
+#default-text, #default-music {
     display: block;
+}
+
+.display_text, .background_video {
+    width: 30%;
 }
 
 @media (min-width: 800px) and (max-width: 1140px){
@@ -403,4 +402,22 @@ select {
     .options{
         margin-left: 20%;
     }
+}
+
+.input-box {
+    display: flex;
+    align-items: center;
+}
+.delete-button {
+    background-color: rgb(212, 0, 0);
+    border-radius: 15px;
+    height: 30px;
+    width: 30px;
+    margin-left: 10px;
+    padding: 0;
+    margin-top: 0.5%;
+}
+
+.delete-button:hover {
+    background-color: rgb(172, 0, 0);
 }
